Prevent resizing flicker problem in webkit browsers

--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -18,6 +18,11 @@ body {
     background-color: var(--main-bg-color);
 }
 
+body.resizing {
+    user-select: none;
+    -webkit-user-select: none;
+}
+
 .close-button {
     position: absolute;
     cursor: pointer;
